--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="info">
           <div style="display: inline-flex; text-align: center; align-items: center; justify-content: space-between; width: 25%; padding-right: 10%;">
-            <div class="i-item">This person does not exist no more</div>
+            <div class="i-item">xxxxxxx</div>
             <div class="i-item">Lv 19</div>
           </div>
           <div style="display: inline-flex; text-align: center; align-items: center; justify-content: space-between; width: 25%;">
